--- a/personal.html
+++ b/personal.html
@@ -4,64 +4,87 @@
 	<head>
 		<title>TodoMisServicios - Quienes Somos</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="./css/tallercss1.css">
-		<link href="http://assets.insights.litmus.com/campaigns/tedc-2015/assets/tweets.css" type="text/css" rel="stylesheet" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="stylesheet" href="./bs4/css/bootstrap.css">
+		<link rel="stylesheet" href="./bs4/css/bootstrap-grid.css">
+		<!--<link rel="stylesheet" href="./css/tallercss1.css">-->
+		<link href="http://assets.insights.litmus.com/campaigns/tedc-2015/assets/tweets.css" type="text/css" rel="stylesheet"/>
+		
 	</head>
 	
 	<body>
-		<header>
-			<h1>TodoMisServicios.ec</h1>
-		</header>
-		<nav>
-			<ul>
-				<li><a href="index.html">Principal</a></li>
-				<li><a href="quienessomos.html">Quienes Somos</a></li>
-				<li><a href="personal.html">Personal</a></li>
-				<li><a href="encuentranos.html">Encuentranos</a></li>
-			</ul>		
-		</nav>
-		
-		
-		<aside class="sidebar">
-			<section>
-				<h3>Como Usar Nuestro sitio</h3>
-				<video width="320" height="240" controls>
-					<source src="https://www.youtube.com/watch?v=cbP2N1BQdYc">
-				</video>
-			</section>
-				
-			<section>
-				<h3>Stream</h3>
-				<div class="stream">
-					<a class="twitter-timeline" data-width="256" data-height="300" data-dnt="true" href="https://twitter.com/espol_fiec?ref_src=twsrc%5Etfw">Tweets by espol_fiec</a> 
-					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-				</div>				
-			</section>
-		</aside>		
-		
-		<div class="principal">
-			<picture>
-			<img class="imagen" src="http://www.genetrix.com.ec/images/Mision.png" alt="testimage" height="50" width="40">
-			</picture>
-			<h2>Datos Personales</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			<h2>Servicios Registrados</h2>
-			<ul>
-				<li><span class="tooltip">SRI</span><span class="tooltiptext">Descripcion Servicio de Rentas Internas</span></li>
-				<li><span class="tooltip">Telefonia Movil </span><span class="tooltiptext">Descripcion telefonia movil</span></li>
-				<li><span class="tooltip">Telefonia fija </span><span class="tooltiptext">Descripcion telefonia fija</span></li>
-				<li><span class="tooltip">Cable</span><span class="tooltiptext">Descripcion de cable </span></li>
-				<li><span class="tooltip">Pensiones alimenticias</span> <span class="tooltiptext">descripcion pensiones alimenticias</span></li>
-			</ul>
-		</div>
-		
-		<footer>
-			<div class="footer-block">
-				<p>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</p>
-			
-				<img src= "http://sytechlabs.com/img/whatiswebapplication.png">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<header>
+						<h1>TodoMisServicios.ec</h1>
+					</header>
+				</div>
 			</div>
-		</footer>
+			<div class="row">
+				<div class=col-12>
+					<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+						<ul class="navbar-nav">
+							<li class="nav-item"><a class="nav-link" href="index.html">Principal</a></li>
+							<li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos</a></li>
+							<li class="nav-item"><a class="nav-link" href="personal.html">Personal</a></li>
+							<li class="nav-item"><a class="nav-link" href="encuentranos.html">Encuentranos</a></li>
+						</ul>		
+					</nav>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-3">
+					<aside>
+						<section>
+							<h3>Como Usar Nuestro sitio</h3>
+							<video width="100%" controls>
+								<source src="https://www.youtube.com/watch?v=cbP2N1BQdYc">
+							</video>
+						</section>
+							
+						<section>
+							<h3>Stream</h3>
+							<div class="stream">
+								<a class="twitter-timeline" data-width="256" data-height="300" data-dnt="true" href="https://twitter.com/espol_fiec?ref_src=twsrc%5Etfw">Tweets by espol_fiec</a> 
+								<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+							</div>				
+						</section>
+					</aside>		
+				</div>
+				<div class="col-9">
+					<picture>
+					<img class="imagen" src="http://www.genetrix.com.ec/images/Mision.png" alt="testimage" height="50" width="40">
+					</picture>
+					<h2>Datos Personales</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<h2>Servicios Registrados</h2>
+					<ul>
+						<li><span class="tooltip">SRI</span><span class="tooltiptext">Descripcion Servicio de Rentas Internas</span></li>
+						<li><span class="tooltip">Telefonia Movil </span><span class="tooltiptext">Descripcion telefonia movil</span></li>
+						<li><span class="tooltip">Telefonia fija </span><span class="tooltiptext">Descripcion telefonia fija</span></li>
+						<li><span class="tooltip">Cable</span><span class="tooltiptext">Descripcion de cable </span></li>
+						<li><span class="tooltip">Pensiones alimenticias</span> <span class="tooltiptext">descripcion pensiones alimenticias</span></li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<footer>
+
+					<div class="container">
+						<div class="row">
+							<div class="col-11">
+								<p>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</p>
+							</div>
+							<div class="col-1">
+								<img src= "http://sytechlabs.com/img/whatiswebapplication.png" width="100%" height="100%">
+							</div>
+						</div>
+					</div>
+				</footer>
+			</div>
+		</div>
 	</body>
 	
 	
