--- a/index.html
+++ b/index.html
@@ -168,10 +168,16 @@
 			
 			<div class="row">
 				<footer>
-					<div class="footer-block">
-						<p>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</p>
-					
-						<img src= "http://sytechlabs.com/img/whatiswebapplication.png">
+
+					<div class="container">
+						<div class="row">
+							<div class="col-11">
+								<p>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</p>
+							</div>
+							<div class="col-1">
+								<img src= "http://sytechlabs.com/img/whatiswebapplication.png" width="100%" height="100%">
+							</div>
+						</div>
 					</div>
 				</footer>
 			</div>
